[package]
name = "editor-config"
description = "Editorconfig implementation in Rust"
repository = "https://github.com/Selyss/editor-config"
license = "MIT"
keywords = [
  "editorconfig",
  "configuration",
  "config",
  "environment",
  "settings",
]
categories = [
  "text-editors",
  "config",
  "parser-implementations",
  "parsing",
  "filesystem",
]
readme = "README.md"
version = "0.2.2"
edition = "2021"

[dependencies]
rust-ini = "0.20.0"
